Si registran habitaciones y servicios

--- a/src/main/resources/config/interfaceConfigApp.json
+++ b/src/main/resources/config/interfaceConfigApp.json
@@ -63,6 +63,14 @@
 				{
 					"label": "Registrar Convencion",
 					"event": "registrarConvencion"
+				},
+				{
+					"label": "Registrar Llegada Convencion",
+					"event": "registrarLlegadaConvencion"
+				},
+				{
+					"label": "Terminar Convencion",
+					"event": "registrarSalidaConvencion"
 				}
 			]
 		},	
