--- a/src/main/resources/config/interfaceConfigApp.json
+++ b/src/main/resources/config/interfaceConfigApp.json
@@ -63,6 +63,10 @@
 				{
 					"label": "Registrar Convencion",
 					"event": "registrarConvencion"
+				},
+				{
+					"label": "Cancelar Reservas",
+					"event": "cancelarReservaConvencion"
 				}
 			]
 		},	
