--- a/src/main/resources/config/interfaceConfigApp.json
+++ b/src/main/resources/config/interfaceConfigApp.json
@@ -84,6 +84,10 @@
 				{
 					"label": "Hacer mantenimiento",
 					"event": "crearMantenimiento"
+				},
+				{
+					"label": "Terminar mantenimiento",
+					"event": "terminarMantenimiento"
 				}
 			]
 		},		
