--- a/src/main/resources/config/interfaceConfigApp.json
+++ b/src/main/resources/config/interfaceConfigApp.json
@@ -45,6 +45,10 @@
 				{
 					"label": "Registrar Llegada",
 					"event": "registrarLlegadaCliente"
+				},
+				{
+					"label": "Registrar Salida",
+					"event": "registrarSalidaCliente"
 				}
 			]
 		},
@@ -53,7 +57,7 @@
 			[
 				{
 					"label": "Registrar Consumo",
-					"event": "registrarConvencion"
+					"event": "adicionarConsumo"
 				}
 			]
 		},	
