--- a/src/main/resources/config/interfaceConfigApp.json
+++ b/src/main/resources/config/interfaceConfigApp.json
@@ -77,7 +77,7 @@
 					"event": "registrarLlegadaConvencion"
 				},
 				{
-					"label": "Terminar Convencion",
+					"label": "Registrar Salida",
 					"event": "registrarSalidaConvencion"
 				}
 			]
